# SKN30-2nd-4Team

./: .env copy  .gitignore  AGENTS.md  README.md  README_PRE.md  main.py  migrate.sh  pyproject.toml
data/api/: KOBIS_API_SPEC.md  README.md  __init__.py  kobis_client.py  kobis_dto.py  kobis_request_test.http  request_test.http
data/db/: README.md  __init__.py  db_manager.py  insert_box_office.ipynb  insert_movie_guide.md  insert_naver_trend.ipynb  insert_people_guide.md  소비자물가지수_2020100__20260520124822_분석(전월_대비_증감률).csv
docs/: 인공지능 데이터 전처리 결과서.md  인공지능 학습 결과서.md  인공지능_데이터_전처리_결과서.md  인공지능_데이터_전처리_결과서_pre.md
docs/meeting/: 05-14.md  05-15.md
ml/: 00_feature_table_v2.ipynb  00_feature_table_v3.ipynb  01_eda_baseline.ipynb  01_eda_baseline_v1.ipynb  01_eda_baseline_v2.ipynb  01_eda_baseline_v3.ipynb  01_eda_baseline_v3_1_15f.ipynb  01_eda_baseline_v3_2_base.ipynb  02_boosting.ipynb  02_boosting_v2.ipynb  02_boosting_v3.ipynb  03_deep_learning_v1.ipynb  03_deep_learning_v2.ipynb  03_deep_learning_v3.ipynb  04_model_comparison.ipynb  04_model_comparison_guide.md  README.md
ml/data/: CHANGELOG.md  baseline_feature_table.md  stage1_oof_predictions.csv  v2_feature_table.md  v3_feature_table.md
ml/models/: base_model_v3.md  boosting_v3.md  dl_regression_mlp_v3.md  dl_regression_mlp_v3.pth  stage2_simulator.pkl  v2_from2016_catboost.pkl  v2_from2016_lightgbm.pkl  v2_from2016_xgboost.pkl  v3_from2016_catboost.pkl  (+2 more)
util/: README.md  __init__.py  config.py
web/: README.md  __init__.py  app.py  feature_table_2026.csv  genre_guardrails.json  stage2_simulator.pkl
(+21 files in other folders)
